--- a/resources/configs/default.conf
+++ b/resources/configs/default.conf
@@ -10,8 +10,8 @@ server
   location /
     root  resources/www/example_website
     index index.html
-  location /rickroll
-    redirect https://www.youtube.com/watch?v=dQw4w9WgXcQ
+  location /school
+    redirect https://42berlin.de/
   location /echo
     cgi_path resources/cgi-script/echo.py
     method GET POST
