--- a/resources/configs/default.conf
+++ b/resources/configs/default.conf
@@ -38,3 +38,10 @@ server
     index default_index.html
     autoindex on
 
+server
+  listen 127.0.0.1:8083
+  server_name kvast.webserv.local
+  max_body_size 0
+  location /
+    root resources/www/Kvast/
+    index index.html
