--- a/resources/configs/default.conf
+++ b/resources/configs/default.conf
@@ -40,8 +40,10 @@ server
 
 server
   listen 127.0.0.1:8083
-  server_name kvast.webserv.local
+  server_name bloom.boutique.webserv.local
   max_body_size 0
   location /
-    root resources/www/Kvast/
+    root resources/www/Boutique/
     index index.html
+location /thank-you.html
+    root resources/www/Boutique/
