--- a/resources/configs/default.conf
+++ b/resources/configs/default.conf
@@ -1,6 +1,5 @@
 server
   listen 127.0.0.1
-
   server_name webserv.local
   max_body_size 1024
   error_page 404  resources/www/example_website/custom_error.html
@@ -13,7 +12,7 @@ server
   location /school
     redirect https://42berlin.de/
   location /echo
-    cgi_path resources/cgi-script/echo.py
+    cgi_path resources/cgi-scripts/echo.py
     method GET POST
   location /onlydelete
     method DELETE
@@ -24,6 +23,15 @@ server
   location /index1.html
     root  resources/www/example_website
     index index2.html
+   location /script
+    cgi_path resources/cgi-scripts/hello.py
+	method GET
+  location /script_loop
+    cgi_path resources/cgi-scripts/infinite_loop.py
+	method GET
+  location /check_fobidden
+    root resources/www/example_website/user_files
+	autoindex off
 
 server
   listen localhost:8082
