--- a/resources/configs/default.conf
+++ b/resources/configs/default.conf
@@ -1,7 +1,7 @@
 server
   listen 127.0.0.1
   server_name webserv.local
-  max_body_size 1024
+  max_body_size 4000839
   error_page 404  resources/www/example_website/custom_error.html
   location /images/
     root  resources/www/example_website/images
