--- a/resources/configs/default.conf
+++ b/resources/configs/default.conf
@@ -2,12 +2,12 @@ server
   listen 127.0.0.1
   server_name webserv.local
   max_body_size 4000839
-  error_page 404  resources/www/example_website/custom_error.html
+  error_page 404  resources/web/example_website/custom_error.html
   location /images/
-    root  resources/www/example_website/images
+    root  resources/web/example_website/images
     autoindex on
   location /
-    root  resources/www/example_website
+    root  resources/web/example_website
     index index.html
   location /school
     redirect https://42berlin.de/
@@ -19,9 +19,9 @@ server
   location /upload_and_delete
     method GET POST DELETE
     autoindex on
-    root resources/www/example_website/user_files
+    root resources/web/example_website/user_files
   location /index1.html
-    root  resources/www/example_website
+    root  resources/web/example_website
     index index2.html
    location /script
     cgi_path resources/cgi-scripts/hello.py
@@ -30,7 +30,7 @@ server
     cgi_path resources/cgi-scripts/infinite_loop.py
 	method GET
   location /check_fobidden
-    root resources/www/example_website/user_files
+    root resources/web/example_website/user_files
 	autoindex off
 
 server
@@ -43,6 +43,16 @@ server
   location /
     autoindex off
     root resources/default_pages/
-    index default_index.html
+    index default_page.html
     autoindex on
+
+server
+  listen 127.0.0.1:8083
+  server_name bloom.boutique.webserv.local
+  max_body_size 0
+  location /
+    root resources/web/Boutique/
+    index index.html
+location /thank-you.html
+    root resources/web/Boutique/
 
