--- a/resources/configs/default2.conf
+++ b/resources/configs/default2.conf
@@ -3,15 +3,15 @@ server
 
   server_name webserv.local
   max_body_size 1024
-  error_page 404  resources/www/example_website/custom_error.html
+  error_page 404  resources/web/example_website/custom_error.html
   location /images/
-    root  resources/www/example_website/images
+    root  resources/web/example_website/images
     autoindex on
   location /
-    root  resources/www/example_website
+    root  resources/web/example_website
     index index.html
   location /rickroll
-    redirect https://www.youtube.com/watch?v=dQw4w9WgXcQ
+    redirect https://web.youtube.com/watch?v=dQw4w9WgXcQ
   location /echo
     cgi_path resources/cgi-scripts/echo.py
     method GET POST
@@ -20,9 +20,9 @@ server
   location /upload_and_delete
     method GET POST DELETE
     autoindex on
-    root resources/www/example_website/user_files
+    root resources/web/example_website/user_files
   location /index1.html
-    root  resources/www/example_website
+    root  resources/web/example_website
     index index2.html
 
 server
@@ -35,14 +35,14 @@ server
   location /
     autoindex off
     root resources/default_pages/
-    index default_index.html
+    index default_page.html
     autoindex on
- 
+
 
 server
   listen 127.0.0.1:8083
   server_name kvast.webserv.local
   max_body_size 0
   location /
-    root resources/www/Kvast/
+    root resources/web/Kvast/
     index index.html
