--- a/resources/configs/default.conf
+++ b/resources/configs/default.conf
@@ -1,6 +1,6 @@
 server
   listen 127.0.0.1
-  server_name webserv.local
+  serverName webserv.local
   max_body_size 4000839
   error_page 404  resources/web/example_website/custom_error.html
   location /images/
@@ -12,7 +12,7 @@ server
   location /school
     redirect https://42berlin.de/
   location /echo
-    cgi_path resources/cgi-scripts/echo.py
+    cgiPath resources/cgi-scripts/echo.py
     method GET POST
   location /onlydelete
     method DELETE
@@ -24,10 +24,10 @@ server
     root  resources/web/example_website
     index index2.html
    location /script
-    cgi_path resources/cgi-scripts/hello.py
+    cgiPath resources/cgi-scripts/hello.py
 	method GET
   location /script_loop
-    cgi_path resources/cgi-scripts/infinite_loop.py
+    cgiPath resources/cgi-scripts/infinite_loop.py
 	method GET
   location /check_fobidden
     root resources/web/example_website/user_files
@@ -35,7 +35,7 @@ server
 
 server
   listen localhost:8082
-  server_name test.webserv.local
+  serverName test.webserv.local
   max_body_size 1024
   location /resources
     method GET
@@ -48,11 +48,10 @@ server
 
 server
   listen 127.0.0.1:8083
-  server_name bloom.boutique.webserv.local
+  serverName bloom.boutique.webserv.local
   max_body_size 0
   location /
     root resources/web/Boutique/
     index index.html
-location /thank-you.html
-    root resources/web/Boutique/
+
 
