--- a/resources/configs/default2.conf
+++ b/resources/configs/default2.conf
@@ -1,7 +1,7 @@
 server
   listen 127.0.0.1
 
-  server_name webserv.local
+  serverName webserv.local
   max_body_size 1024
   error_page 404  resources/web/example_website/custom_error.html
   location /images/
@@ -13,7 +13,7 @@ server
   location /rickroll
     redirect https://web.youtube.com/watch?v=dQw4w9WgXcQ
   location /echo
-    cgi_path resources/cgi-scripts/echo.py
+    cgiPath resources/cgi-scripts/echo.py
     method GET POST
   location /onlydelete
     method DELETE
@@ -27,7 +27,7 @@ server
 
 server
   listen localhost:8082
-  server_name test.webserv.local
+  serverName test.webserv.local
   max_body_size 1024
   location /resources
     method GET
@@ -38,11 +38,3 @@ server
     index default_page.html
     autoindex on
 
-
-server
-  listen 127.0.0.1:8083
-  server_name kvast.webserv.local
-  max_body_size 0
-  location /
-    root resources/web/Kvast/
-    index index.html
